--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node Server.js"
+    "start": "nodemon Server.js"
   },
   "keywords": [],
   "author": "",
